Refactored auth related tables