@@ -2,11 +2,14 @@ package com.coachapp.coach_pc.service;
 
 import com.coachapp.coach_pc.Credentials;
 import com.coachapp.coach_pc.config.KeycloakConfig;
+import com.coachapp.coach_pc.enums.ERole;
 import com.coachapp.coach_pc.enums.UserType;
 import com.coachapp.coach_pc.model.*;
 import com.coachapp.coach_pc.repository.UserDataRepo;
+import org.keycloak.adapters.springsecurity.token.KeycloakAuthenticationToken;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.admin.client.resource.*;
+import org.keycloak.representations.AccessToken;
 import org.keycloak.representations.AccessTokenResponse;
 import org.keycloak.representations.idm.ClientRepresentation;
 import org.keycloak.representations.idm.CredentialRepresentation;
@@ -54,37 +57,6 @@ public class AuthService {
         accessTokenResponse = keycloak.tokenManager().getAccessToken();
 
         return new ResponseEntity<>(accessTokenResponse, HttpStatus.OK);
-
-        //http://localhost:8080/realms/dev/protocol/openid-connect/userinfo
-
-//        MultiValueMap<String, String> map = new LinkedMultiValueMap<>();
-//        map.add("client_id", clientId);
-//        map.add("client_secret", clientSecret);
-//        map.add("grant_type", "client_credentials");
-//
-//        HttpHeaders h1 = new HttpHeaders();
-//        h1.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
-//
-//        HttpEntity<MultiValueMap<String, String>> httpEntity = new HttpEntity<>(map, h1);
-//
-//        ResponseEntity<LoginResponse> response = restTemplate.postForEntity(
-//                "http://localhost:8080/realms/dev/protocol/openid-connect/token",
-//                httpEntity,
-//                LoginResponse.class
-//        );
-
-//        h.setBearerAuth(response.getBody().getAccess_token());
-//        h.setContentType(MediaType.APPLICATION_FORM_URLENCODED);
-//        MultiValueMap<String, String> body = new LinkedMultiValueMap<>();
-//    //    headers.add("Authorization", response.getBody().getAccess_token());
-//        body.add("client_id", clientId);
-//        body.add("client_secret", clientSecret);
-//
-//        HttpEntity<MultiValueMap<String, String>> request = new HttpEntity<>(body, h);
-//        ResponseEntity<String> s = restTemplate.getForEntity(keycloakUserInfoUrl, String.class, request);
-//       // String s = restTemplate.getForObject(keycloakUserInfoUrl, String.class, headers);
-//        System.out.println(s.getBody());
-//        keycloak.realm("dev").users().get().
     }
 
     public ResponseEntity<Response> logout(TokenRequest tokenRequest) {
@@ -118,39 +90,45 @@ public class AuthService {
     public ResponseEntity<String> register(UserDTO userDTO) {
         ResponseEntity<LoginResponse> response = getClientToken();
 
-            CredentialRepresentation credential = Credentials.createPasswordCredentials(userDTO.getPassword());
+        CredentialRepresentation credential = Credentials.createPasswordCredentials(userDTO.getPassword());
 
-            RealmResource instance = getInstance(response.getBody().getAccess_token(), clientId);
+        RealmResource instance = getInstance(response.getBody().getAccess_token(), clientId);
 
-            UserRepresentation user = new UserRepresentation();
+        UserRepresentation user = new UserRepresentation();
 
-            user.setUsername(userDTO.getUsername());
-            user.setFirstName(userDTO.getFirstName());
-            user.setLastName(userDTO.getLastName());
-            user.setEmail(userDTO.getEmail());
-            user.setCredentials(Collections.singletonList(credential));
-            user.setEnabled(true);
+        user.setUsername(userDTO.getUsername());
+        user.setFirstName(userDTO.getFirstName());
+        user.setLastName(userDTO.getLastName());
+        user.setEmail(userDTO.getEmail());
+        user.setCredentials(Collections.singletonList(credential));
+        user.setEnabled(true);
 
-            UsersResource users = instance.users();
+        UsersResource users = instance.users();
 
-            javax.ws.rs.core.Response r = users.create(user);
+        javax.ws.rs.core.Response r = users.create(user);
 
 
-            UserRepresentation savedUser = users.list().stream().filter(u -> u.getUsername().equals(user.getUsername())).collect(Collectors.toList()).get(0);
-            String userId = savedUser.getId();
-            UserType type = userDTO.getRole().equals("athlete") ? UserType.ATHLETE : UserType.COACH;
-            savedUser.setRealmRoles(Collections.singletonList(userDTO.getRole()));
-            users.get(userId).update(savedUser);
+        UserRepresentation savedUser = users.list()
+                .stream()
+                .filter(u -> u.getUsername().equals(user.getUsername()))
+                .toList()
+                .get(0);
 
-            UserData userDB = new UserData(userId,
-                    new Date(savedUser.getCreatedTimestamp()),
-                    new Date(savedUser.getCreatedTimestamp()),
-                    type,
-                    savedUser.getEmail()
-            );
-            _userDataRepo.save(userDB);
 
-            return new ResponseEntity<>("Success", HttpStatus.SEE_OTHER);
+        ERole role = userDTO.getRole().equals("athlete") ? ERole.athlete : ERole.coach;
+
+        UserData userDB = new UserData();
+        userDB.setCreatedAt(new Date(savedUser.getCreatedTimestamp()));
+        userDB.setUpdatedAt(new Date(savedUser.getCreatedTimestamp()));
+        userDB.setUsername(savedUser.getUsername().toLowerCase());
+        userDB.setEmail(savedUser.getEmail().toLowerCase());
+        Set<Role> newRoles = new HashSet<>();
+        newRoles.add(new Role(role));
+        userDB.setRoles(newRoles);
+
+        _userDataRepo.save(userDB);
+
+        return new ResponseEntity<>("Success", HttpStatus.SEE_OTHER);
     }
 
     public RealmResource getInstance(String token, String clientId){
